--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/securitydb
 spring.datasource.username=postgres
 spring.datasource.password=alex
 
+
+jwt.header=Autherization
+jwt.secret=jwt
+jwt.expiration = 604800
+
